--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
         <junit.version>5.8.2</junit.version>
+
+        <maven.compiler.source>17</maven.compiler.source>  <!-- Set this to the desired Java version -->
+        <maven.compiler.target>17</maven.compiler.target>  <!-- Set this to the desired Java version -->
+        <maven.compiler.release>17</maven.compiler.release>
     </properties>
 
     <dependencies>
@@ -131,6 +135,12 @@
             <artifactId>weld-servlet-core</artifactId>
             <version>5.1.3.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.8</version>
+        </dependency>
 
 
     </dependencies>
@@ -141,7 +151,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
+                <version>0.8.12</version>
                 <executions>
                     <execution>
                         <goals>
@@ -156,6 +166,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>sun/util/resources/**</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
 
         </plugins>
